# SAP_HANA_RUST

./: README.md  ReadMe.txt
diagnostic_file_analysis/: .gitignore  Cargo.toml  README.md
diagnostic_file_analysis/logs/: indexserver_service.rtedump
diagnostic_file_analysis/src/: main.rs
from-hana-to-kafka/: .env  .gitignore  Cargo.toml  README.md
from-hana-to-kafka/src/: env_work.rs  kafka.rs  main.rs  my_log.rs
from-kafka-to-iceberg/: .env  .gitignore  Cargo.toml  README.md
from-kafka-to-iceberg/src/: env_work.rs  iceberg.rs  kafka.rs  main.rs  my_log.rs
rust-log-parser/: .gitignore  README.md
rust-log-parser/parser_logs/: rust-log-parser.2026-04-12
rust-log-parser/src/: my_log.rs
rust-log-parser3/: .env  Cargo.toml  README.md
rust-log-parser3/src/: env_work.rs  kafka.rs  main.rs
sql/: Cargo.toml  README.md
sql/src/: main.rs
trace_file_analysis/: Cargo.toml  README.md
trace_file_analysis/logs/: indexserver.trc
trace_file_analysis/src/: main.rs
