[package]
name = "from-hana-to-kafka"
version = "0.1.0"
edition = "2024"
description = "ODBC: SAP HANA -> USERS -> JSON -> Apache Kafka"

[dependencies]
dotenv = "0.15"
odbc-api = "13"
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
