[package]
name = "from-kafka-to-iceberg"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow-array = "57.1"
dotenv = "0.15"
iceberg = "0.9"
parquet = "57.1"
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
