[package]
name = "rust-log-parser"
version = "0.1.0"
edition = "2021"
description = "Разбор текстовых лог-файлов в структуры, опциональная отправка JSON в Kafka, логи в parser_logs/"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
regex = "1.11"
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
