[package]
name = "trace_file_analysis"
version = "0.1.0"
edition = "2024"
publish = false
homepage = "https://artaudiochats.t.me/"
authors = ["Arthur Pronota <yhgvnhjk.986ght.jhgt543@gmail.com>"]

[dependencies]
regex = "1.12.2"
chrono = "0.4.43"
tokio = { version = "1", features = ["full"] } 


iceberg = { version = "0.9.0"  }
arrow = "58.1.0"
parquet = "58.1.0"
anyhow = "1.0.102"

rdkafka = { version = "0.39", features = ["cmake-build", "ssl", "zstd"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

